sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:4: error: not found: value i
  var v = getValeur(i)
                    ^