sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  
  var v = getValeur(i)
  
  for (i <- 1 to getNombreValeurs()-1) {
    
    var last = 0
    
    for (c <- 1 to i) {
      
      var a = getValeur(i-c)
      
      if (a>v) {
        
        setValeur(i-c+1,a)
        last = c
        
      }
      
    }
    
    setValeur(i-last,v)
    
  }
  
}
